--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemalocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemalocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>lambdaisland</groupId>
   <artifactId>garden-watcher</artifactId>
-  <version>1.0.36</version>
+  <version>1.0.45</version>
   <name>garden-watcher</name>
   <description>Hot-reload your Garden stylesheets</description>
   <url>https://github.com/lambdaisland/garden-watcher</url>
@@ -22,7 +22,7 @@
     <url>https://github.com/lambdaisland/garden-watcher</url>
     <connection>scm:git:git://github.com/lambdaisland/garden-watcher.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/lambdaisland/garden-watcher.git</developerConnection>
-    <tag>3f8c99276cecba92c359f7a01178f379a630e1e7</tag>
+    <tag>df2e726ad04435e7a006d405159fb75afbc37748</tag>
   </scm>
   <dependencies>
     <dependency>
@@ -66,7 +66,7 @@
         <configuration>
           <archive>
             <manifestEntries>
-              <git-revision>3f8c99276cecba92c359f7a01178f379a630e1e7</git-revision>
+              <git-revision>df2e726ad04435e7a006d405159fb75afbc37748</git-revision>
             </manifestEntries>
           </archive>
         </configuration>
